--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Library Management System"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -20,12 +20,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# For local development (SQLite)
+# DB_CONNECTION=sqlite
+
+# For Docker/Production (MySQL)
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=library
+DB_USERNAME=library_user
+DB_PASSWORD=library_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -37,15 +41,17 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
+# For local development and Docker
 CACHE_STORE=database
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+# Redis configuration (if needed in the future)
+# REDIS_CLIENT=phpredis
+# REDIS_HOST=127.0.0.1
+# REDIS_PASSWORD=null
+# REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
