--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.log
 .DS_Store
-.env
+.env.local
 .env.backup
 .env.production
 .phpactor.json
@@ -18,6 +18,9 @@
 /public/storage
 /storage/*.key
 /storage/pail
+/storage/coverage-html
+/storage/coverage-clover.xml
+/storage/coverage.txt
 /vendor
 Homestead.json
 Homestead.yaml
