--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,34 @@ services:
     networks:
       - library_network
 
+  react-app:
+    build:
+      context: ../library-react
+      dockerfile: Dockerfile
+    container_name: library_react_app
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      # Mount source code for hot reloading
+      - ../library-react/src:/app/src
+      - ../library-react/public:/app/public
+      # Mount package.json for dependency changes
+      - ../library-react/package.json:/app/package.json
+      - ../library-react/package-lock.json:/app/package-lock.json
+      # Prevent node_modules from being mounted (use container's version)
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+      - REACT_APP_API_URL=http://localhost:8000/api
+    depends_on:
+      - app
+    stdin_open: true
+    tty: true
+    networks:
+      - library_network
+
   mysql:
     image: mysql:8.0
     container_name: library_mysql
