--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - storage_data:/var/www/html/storage
       - bootstrap_cache:/var/www/html/bootstrap/cache
       - ./storage/logs:/var/www/html/storage/logs
+      - /var/www/html/vendor
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
