--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,24 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/var/www/html
+      # Mount source code for development (excluding vendor, storage, bootstrap/cache)
+      - ./app:/var/www/html/app
+      - ./config:/var/www/html/config
+      - ./database:/var/www/html/database
+      - ./public:/var/www/html/public
+      - ./resources:/var/www/html/resources
+      - ./routes:/var/www/html/routes
+      - ./tests:/var/www/html/tests
+      - ./.env.local:/var/www/html/.env
+      - ./artisan:/var/www/html/artisan
+      - ./composer.json:/var/www/html/composer.json
+      - ./composer.lock:/var/www/html/composer.lock
+      # Preserve container-built dependencies and cache
+      - /var/www/html/vendor
       - storage_data:/var/www/html/storage
       - bootstrap_cache:/var/www/html/bootstrap/cache
+      # Mount logs for easy access
       - ./storage/logs:/var/www/html/storage/logs
-      - /var/www/html/vendor
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
